fix for 100vh problem on mobile

--- a/src/sass/home/_index.scss
+++ b/src/sass/home/_index.scss
@@ -8,6 +8,14 @@
         align-items: center;
         min-height: 70vh;
         padding: 2rem;
+
+        @media screen and (max-width: 840px) {
+            min-height: 90vh;
+        }
+
+        @media screen and (max-width: 420px) {
+            padding: 0;
+        }
     }
 
     &__circle {
@@ -45,7 +53,7 @@
             grid-column: 1 / 3;
             justify-self: center;
             font-size: $font-xxlarge;
-            color: $color-secondary;
+            color: $color-primary;
         }
 
         &__github {
@@ -54,6 +62,10 @@
             justify-self: flex-end;
             align-self: center;
             padding: 2.4rem;
+
+            a {
+                color: $color-secondary;
+            }
         }
 
         &__demo {
@@ -63,6 +75,10 @@
             justify-self: flex-start;
             align-self: center;
             padding: 2.4rem;
+            
+            a {
+                color: $color-secondary;
+            }
         }
     }
 
